--- a/css/reset.css
+++ b/css/reset.css
@@ -22,6 +22,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	text-decoration: none;
+	color: inherit;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -34,7 +36,7 @@ body {
 	line-height: 1;
 }
 
-ol, ul {
+ol, ul, nav {
 	list-style: none;
 }
 
